2026-01-30T01:44:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21501373212 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 211 278 / 213 280
* notice: next accum: outdated-unq outdated-all / unq all: 212 279 / 214 281
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-09 2026-01-10 2026-01-11 2026-01-12 2026-01-13 2026-01-14] / [2026-01-24]

2026-01-29T01:43:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21462392767 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: next accum: outdated-unq outdated-all / unq all: 211 278 / 213 280
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28 2025-12-29] / [2026-01-13 2026-01-16]

2026-01-03T02:06:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20670720831 # 858
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-03
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: next accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0